fix thumbnail alignment breaking on long caption

--- a/app/styles/screen.sass
+++ b/app/styles/screen.sass
@@ -230,6 +230,8 @@ p
     text-decoration: none
   .project:nth-child(4n+4)
     margin-right: 0
+  .project:nth-child(4n+5)
+    clear: left
   @media only screen and (max-width: 960px)
     .project:nth-child(4n+4)
       margin-right: 40px
